data/derived/fa15/progs/unify/prog3355.ml.out
Characters 24-29:
  List.map string_of_int [1,2,3];;
                          ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
